@@ -1,3 +1,4 @@
+- added lock delay (2020/12/25 MS)
 - allow more keys for controls (2020/12/25 MS)
 - added hyper DAS option (2020/12/25 MS)
 - added training mode with optional zero gravity (2020/07/01 MS) 
